# reservamos_challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt  scripts.py
forecast/: logger.py  serializers.py  views.py
forecast/services/: openweather_service.py  reservamos_service.py
tests/integration/: test_forecast_api.py
tests/unit/: test_openweather_service.py  test_reservamos_service.py
weather_api/: settings.py  urls.py
